# fastapi_boilerplate_with_basic_auth

./: Procfile  README.md  alembic.ini  pyproject.toml  requirements.txt
app/: .env  application.py  main.py  manage.py
app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/alembic/: env.py
app/alembic/versions/: 07c857af25ab_initial.py  09e517221206_tokens_table.py  1a2e47c23a31_user_model.py  a2df51531b02_initial_models.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: customer.py  group.py  login.py  permission.py  resource.py  user.py
app/crud/: customer.py  group.py  permission.py  resource.py  user.py
app/models/: Customer.py  Post.py  Token.py
app/schemas/: common.py  customer.py  group.py  permission.py  resource.py  token.py  user.py
app/utils/: app_event_funcs.py  dependencies.py
tests/: test_admin_setup.py
