[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Shubham Biswas <shubhambiswas.zero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.53.2"
databases = "0.3.2"
sqlalchemy = "^1.3.15"
alembic = "^1.4.2"
autopep8 = "^1.5"
uvicorn = "^0.11.3"
passlib = "^1.7.2"
pyjwt = "^1.7.1"
python-dotenv = "^0.12.0"
asyncpg = "^0.20.1"
psycopg2-binary = "^2.8.4"
permissions-system = "^0.1.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
